fixed z-index of tools

--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -6,7 +6,7 @@
   height: 120px;
   transition: all .5s ease;
   position: absolute;
-  z-index: 1;
+  z-index: 6;
   bottom: 0px;
   left: calc(80% - 225px);
   background-color: rgba(175,197,212,0.9);
